# ninety-nine-ocaml-problems

./: README.md  dune-project
lib/: dune  problem_1.ml  problem_2.ml  problem_3.ml  problem_4.ml
test/: dune
